tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/bool_addition.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(true + true)

